Fixes rtl languages

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>PDF.js viewer</title>
@@ -114,7 +114,7 @@
         </div>
 
         <div id="viewerContainer">
-          <div id="viewer"></div>
+          <div id="viewer" dir="ltr"></div>
         </div>
 
         <div id="loadingBox">
