Fixes rtl zoom and page up/down icons

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -117,7 +117,7 @@
         </div>
 
         <div id="viewerContainer">
-          <div id="viewer" dir="ltr"></div>
+          <div id="viewer"></div>
         </div>
 
         <div id="loadingBox">
