Fixing display: none; title for zoom

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -119,7 +119,7 @@
                      </button>
                   </div>
                   <span class="dropdownToolbarButton">
-                     <select id="scaleSelect" onchange="PDFView.parseScale(this.value);" oncontextmenu="return false;" tabindex="9">
+                     <select id="scaleSelect" onchange="PDFView.parseScale(this.value);" title="Zoom" oncontextmenu="return false;" tabindex="9">
                       <option id="pageAutoOption" value="auto" selected="selected">Automatic Zoom</option>
                       <option value="page-actual">Actual Size</option>
                       <option id="pageFitOption" value="page-fit">Fit Page</option>
