Fixes the small artifact with the bookmark button

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -103,9 +103,7 @@
                   <span>Download</span>
                 </button>
                 <!-- <div class="toolbarButtonSpacer"></div> -->
-                <a href="#" id="viewBookmark" class="toolbarButton bookmark" title="Bookmark (or copy) current location" tabindex="13">
-                  <span>Bookmark</span>
-                </a>
+                <a href="#" id="viewBookmark" class="toolbarButton bookmark" title="Bookmark (or copy) current location" tabindex="13"><span>Bookmark</span></a>
               </div>
               <div class="outerCenter">
                 <div class="innerCenter" id="toolbarViewerMiddle">
