--- a/test/unit/unit_test.html
+++ b/test/unit/unit_test.html
@@ -39,6 +39,7 @@
   <script type="text/javascript" src="font_spec.js"></script>
   <script type="text/javascript" src="function_spec.js"></script>
   <script type="text/javascript" src="crypto_spec.js"></script>
+  <script type="text/javascript" src="evaluator_spec.js"></script>
   <script type="text/javascript" src="stream_spec.js"></script>
   <script type="text/javascript" src="api_spec.js"></script>
   <script type="text/javascript" src="metadata_spec.js"></script>
