Addressing the bug 742099 review

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -63,7 +63,7 @@
           <div id="searchView" class="hidden">
             <div id="searchToolbar">
               <input id="searchTermsInput" onkeydown='if (event.keyCode == 13) PDFView.search()'>
-              <button id="searchButton" onclick='PDFView.search()' data-l10n-id="search_button">Find</button>
+              <button id="searchButton" onclick='PDFView.search()' data-l10n-id="search">Find</button>
             </div>
             <div id="searchResults"></div>
           </div>
