[Editor] Add the possibility to add Popup annotations (bug 1976724)
It's a first big step.
This patch contains a new modal dialog to let the user edit/update a Popup

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -771,6 +771,37 @@ See https://github.com/adobe-type-tools/cmap-resources
         </div>
       </dialog>
 
+      <dialog class="dialog commentManager" id="commentManagerDialog">
+        <div class="mainContainer">
+          <div id="commentManagerToolbar">
+            <button id="commentActionsButton" class="toolbarButton" type="button" aria-expanded="false" aria-haspopup="true" aria-controls="commentActionsMenu" tabindex="0" data-l10n-id="pdfjs-editor-edit-comment-actions-button">
+              <span data-l10n-id="pdfjs-editor-edit-comment-actions-button-label"></span>
+            </button>
+            <menu class="hidden" role="menu" id="commentActionsMenu">
+              <button id="commentActionsEditButton" role="menuitem" type="button" tabindex="0">
+                <span data-l10n-id="pdfjs-editor-edit-comment-actions-edit-button-label"></span>
+              </button>
+              <button id="commentActionsDeleteButton" role="menuitem" type="button" tabindex="0">
+                <span data-l10n-id="pdfjs-editor-edit-comment-actions-delete-button-label"></span>
+              </button>
+            </menu>
+            <button id="commentCloseButton" class="toolbarButton" type="button" tabindex="0" data-l10n-id="pdfjs-editor-edit-comment-close-button">
+              <span data-l10n-id="pdfjs-editor-edit-comment-close-button-label"></span>
+            </button>
+          </div>
+          <textarea class="hidden" id="commentManagerTextInput" data-l10n-id="pdfjs-editor-edit-comment-manager-text-input"></textarea>
+          <div class="hidden" id="commentManagerTextView"></div>
+          <div class="dialogButtonsGroup">
+            <button id="commentManagerCancelButton" type="button" class="secondaryButton" tabindex="0">
+              <span data-l10n-id="pdfjs-editor-edit-comment-manager-cancel-button"></span>
+            </button>
+            <button id="commentManagerSaveButton" type="button" class="primaryButton" disabled tabindex="0">
+              <span data-l10n-id="pdfjs-editor-edit-comment-manager-save-button"></span>
+            </button>
+          </div>
+        </div>
+      </dialog>
+
 <!--#if !MOZCENTRAL-->
         <dialog id="printServiceDialog" style="min-width: 200px;">
           <div class="row">
