--- a/extensions/chromium/options/options.html
+++ b/extensions/chromium/options/options.html
@@ -33,11 +33,24 @@ body {
 .checkbox label input {
   flex-shrink: 0;
 }
+input:invalid {
+  border-color: #f44;
+  outline-color: #f44;
+}
 </style>
 </head>
 <body>
 <div id="settings-boxes"></div>
 <button id="reset-button" type="button">Restore default settings</button>
+
+<template id="number-template">
+<div class="settings-row">
+  <label>
+    <span></span>
+    <input type="number" min="0" max="" step="any" value="" placeholder="0">
+  </label>
+</div>
+</template>
 
 <template id="checkbox-template">
 <div class="settings-row checkbox">
