added filter toggle button
- new `string-template` and `renderStringPref` (regex pattern matching) in chromium extension options
- new `cssInvertPage`, `cssInvertThumb`, and `cssInvertFilter` settings (with defaults; off by default)
  - available filters: `brightness()`, `contrast()`, `grayscale()`, `invert()`, `sepia()`, `saturate()`, and `hue-rotate()` via regex (valid CSS syntax)
- translations for `en-US`, `en-GB`, `en-CA`, and `de`
- filter influences PDF view container and PDF thmbnail container (thus also custom text/drawings/highlights)
- new svg as icon (modified `toolbarButton-editorStamp.svg`)
- button toggle is added next to zoom/scale controls in the middle of the toolbar

--- a/extensions/chromium/options/options.html
+++ b/extensions/chromium/options/options.html
@@ -43,6 +43,15 @@ input:invalid {
 <div id="settings-boxes"></div>
 <button id="reset-button" type="button">Restore default settings</button>
 
+<template id="string-template">
+<div class="settings-row">
+  <label>
+    <span></span>
+    <input type="text" value="" pattern="" placeholder="">
+  </label>
+</div>
+</template>
+
 <template id="number-template">
 <div class="settings-row">
   <label>
