--- a/web/viewer.html
+++ b/web/viewer.html
@@ -242,6 +242,9 @@ See https://github.com/adobe-type-tools/cmap-resources
                     <option value="4" data-l10n-id="pdfjs-page-scale-percent" data-l10n-args='{ "scale": 400 }'></option>
                   </select>
                 </span>
+                <button id="invertButton" class="toolbarButton" type="button" tabindex="0" data-l10n-id="pdfjs-invert-button" role="checkbox" aria-checked="false">
+                  <span data-l10n-id="pdfjs-invert-button-label"></span>
+                </button>
               </div>
               <div id="toolbarViewerRight" class="toolbarHorizontalGroup">
                 <div id="editorModeButtons" class="toolbarHorizontalGroup" role="radiogroup">
