add redo/undo buttons.

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -332,6 +332,12 @@ See https://github.com/adobe-type-tools/cmap-resources
                       </div>
                     </div>
                   </div>
+                  <button id="undoButton" class="toolbarButton" type="button" tabindex="0" data-l10n-id="pdfjs-undo-button">
+                    <span data-l10n-id="pdfjs-undo-button-label"></span>
+                  </button>
+                  <button id="redoButton" class="toolbarButton" type="button" tabindex="0" data-l10n-id="pdfjs-redo-button">
+                    <span data-l10n-id="pdfjs-redo-button-label"></span>
+                  </button>
                 </div>
 
                 <div id="editorModeSeparator" class="verticalToolbarSeparator"></div>
