[Editor] Make scrollable the area containing the comments in the sidebar

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -260,7 +260,9 @@ See https://github.com/adobe-type-tools/cmap-resources
                             <span data-l10n-id="pdfjs-editor-comments-sidebar-close-button-label"></span>
                           </button>
                         </div>
-                        <ul id="editorCommentsSidebarList"></ul>
+                        <div id="editorCommentsSidebarListContainer">
+                          <ul id="editorCommentsSidebarList"></ul>
+                        </div>
                       </div>
                     </div>
                   </div>
