finish submit task logic

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -356,7 +356,7 @@ See https://github.com/adobe-type-tools/cmap-resources
                   </div>
                 </div>
 
-                <button class="dotti_button">提交签名</button>
+                <button style="display: none;" class="dotti_button" id="submitSignatureButton">提交签名</button>
 
                 <div id="editorModeSeparator" class="verticalToolbarSeparator"></div>
 
